# mindvision-cam-wrapper

./: .gitignore  CMakeLists.txt  README.md
include/image/: CameraInput.h  ImageInput.h  MVCameraInput.h  VideoInput.h
include/image/MVSDK/: README.md
src/: ImageInput.h  MVCameraInput.cpp  VideoInput.cpp  VideoInput.h  camera_test.cpp
src/demo/: camera_test.cpp
src/image/: CameraInput.cpp  MVCameraInput.cpp  VideoInput.cpp
